# paperAgent

./: README.md  demo.py  demo2.py  main.py  pyproject.toml
api/: server.py  session_manager.py
config/: settings.py
src/: app_factory.py
src/generation/: rag.py
src/indexing/: embed_data.py  memory_store.py  milvus_vdb.py
src/ingestion/: load_split.py
src/retrieval/: retriever_rerank.py
src/tools/: firecrawl_search.py
src/workflows/: workflow.py
